[metadata]
name         = schwarzlog
version      = file: VERSION.txt
author       = Felix Schwarz
author_email = felix.schwarz@oss.schwarz.eu
license      = MIT
license_file = LICENSE.txt


[options]
packages = find:
namespace_packages = schwarz
zip_safe = false
include_package_data = true


[options.extras_require]
testing =
    PythonicTestcase
    testfixtures


[bdist_wheel]
universal = 1

